refactor: remove deprecated smart affinity field
